# surd

./: .gitignore  README.md
clean/: .gitignore  AlgNum.dcl  AlgNum.icl  Algebra.dcl  Algebra.icl  Convert.dcl  Convert.icl  Cyclotomic.dcl  Cyclotomic.icl  DAG.dcl  DAG.icl  DemoEllipticIntegral.icl  DemoEulerIntegral.icl  DemoSolvableQuintic.icl  DemoTrigTable.icl  Denest.dcl  Denest.icl  DynTower.dcl  DynTower.icl  DynTowerDisplay.dcl  DynTowerDisplay.icl  Elliptic.dcl  Elliptic.icl  Equality.dcl  Equality.icl  Euler.dcl  Euler.icl  Eval.dcl  Eval.icl  EvalMP.dcl  EvalMP.icl  Expr.dcl  Expr.icl  Extension.dcl  Extension.icl  Factoring.dcl  Factoring.icl  GaloisSolve.dcl  GaloisSolve.icl  Groebner.dcl  (+64 more)
curry/: .gitignore  AlgNum.curry  Convert.curry  Cyclotomic.curry  DAG.curry  DemoEllipticIntegral.curry  DemoEulerIntegral.curry  DemoSolvableQuintic.curry  DemoTrigTable.curry  Denest.curry  EllipticIntegration.curry  EulerIntegration.curry  Eval.curry  Expr.curry  Extension.curry  Factoring.curry  GaloisSolve.curry  Identify.curry  Interval.curry  LaTeX.curry  MinimalPoly.curry  NormalForm.curry  Normalize.curry  Permutation.curry  Poly.curry  Positive.curry  Pretty.curry  PrimeFactors.curry  RadExpr.curry  RadicalTower.curry  Rational.curry  Resolvent.curry  Resultant.curry  RootBound.curry  RootIsolation.curry  RootOfUnity.curry  Test.curry  TransitiveGroup.curry  Trig.curry  TrigGalois.curry
docs/: API.md  THEORY.md
fstar/: .gitignore  Makefile  Surd.AlgNum.fst  Surd.Convert.fst  Surd.Cyclotomic.fst  Surd.DAG.fst  Surd.Demo.EllipticIntegral.fst  Surd.Demo.EulerIntegral.fst  Surd.Demo.SolvableQuintic.fst  Surd.Demo.TrigTable.fst  Surd.Denest.fst  Surd.EllipticIntegration.fst  Surd.EulerIntegration.fst  Surd.Eval.fst  Surd.Eval.fst.checked  Surd.Expr.fst  Surd.Expr.fst.checked  Surd.Extension.fst  Surd.Factoring.fst  Surd.GaloisSolve.fst  Surd.Identify.fst  Surd.Interval.fst  Surd.Interval.fst.checked  Surd.LaTeX.fst  Surd.LaTeX.fst.checked  Surd.Lemmas.fst  Surd.MinimalPoly.fst  Surd.NormalForm.fst  Surd.Normalize.fst  Surd.Normalize.fst.checked  Surd.Permutation.fst  Surd.Poly.fst  Surd.Poly.fst.checked  Surd.Positive.fst  Surd.Positive.fst.checked  Surd.Pretty.fst  Surd.Pretty.fst.checked  Surd.PrimeFactors.fst  Surd.PrimeFactors.fst.checked  Surd.RadicalTower.fst  (+15 more)
haskell/: cabal.project  surd.cabal
haskell/algebraic-polynomials/: algebraic-polynomials.cabal
haskell/algebraic-polynomials/src/Math/Field/: Extension.hs  Transcendental.hs
haskell/algebraic-polynomials/src/Math/Internal/: Interval.hs  PSLQ.hs  Positive.hs  PrimeFactors.hs
haskell/algebraic-polynomials/src/Math/Polynomial/: Cyclotomic.hs  Factoring.hs  Groebner.hs  Multivariate.hs  Resultant.hs  RootBound.hs  TragerFactoring.hs  Univariate.hs
haskell/demo/: EllipticIntegral.hs  EulerIntegral.hs  SolvableQuintic.hs  TrigTable.hs
haskell/src/Surd/: Trig.hs  Types.hs
haskell/src/Surd/Algebraic/: Convert.hs  Number.hs  RootIsolation.hs
haskell/src/Surd/Field/: DynTower.hs  Extension.hs  Tower.hs  Transcendental.hs
haskell/src/Surd/Field/DynTower/: Display.hs
haskell/src/Surd/Galois/: AffineGroup.hs  Identify.hs  Permutation.hs  RadicalTower.hs  Resolvent.hs  Solve.hs  TransitiveGroup.hs
haskell/src/Surd/Integration/: Elliptic.hs  Euler.hs
haskell/src/Surd/Internal/: Interval.hs  PSLQ.hs  Positive.hs  PrimeFactors.hs
haskell/src/Surd/Polynomial/: Cyclotomic.hs  Factoring.hs  MinimalPoly.hs  MinimalPolyTower.hs  Multivariate.hs  TragerFactoring.hs  Univariate.hs
haskell/src/Surd/Radical/: DAG.hs  Denest.hs  Equality.hs  Eval.hs  EvalMP.hs  Expr.hs  Groebner.hs  LaTeX.hs  NormalForm.hs  Normalize.hs  Order.hs  Pretty.hs
haskell/src/Surd/Radical/Denest/: Landau.hs  NthRoot.hs  Sqrt.hs
haskell/src/Surd/Trig/: Galois.hs  RootOfUnity.hs  TowerDescent.hs
haskell/test/: Main.hs
haskell/test/Test/: Algebraic.hs  Denest.hs  DynTower.hs  Groebner.hs  Interval.hs  Multivariate.hs  NormalForm.hs  Polynomial.hs  TragerFactoring.hs  Trig.hs
idris2/: surd-elliptic.ipkg  surd-euler.ipkg  surd-quintic.ipkg  surd-small.ipkg  surd-trig.ipkg  surd-trigmin.ipkg  surd.ipkg
idris2/src/: Test.idr
koka/surd/: alg-num.kk  convert.kk  cyclotomic.kk  dag.kk  denest.kk  elliptic-integration.kk  euler-integration.kk  eval-effect.kk  eval.kk  expr.kk  extension.kk  factoring.kk  galois-solve.kk  identify.kk  interval.kk  latex.kk  minimal-poly.kk  normal-form.kk  normalize.kk  permutation.kk  poly.kk  positive.kk  pretty.kk  prime-factors.kk  rad-expr.kk  radical-tower.kk  rational.kk  resolvent.kk  resultant.kk  ring-effect.kk  ring.kk  root-bound.kk  root-isolation.kk  root-of-unity.kk  test.kk  transitive-group.kk  trig-galois.kk  trig.kk
lean4/: Surd.lean  lake-manifest.json  lakefile.lean
lean4/Demo/: EllipticIntegral.lean  EulerIntegral.lean  SolvableQuintic.lean  TrigTable.lean
lean4/Surd/: Interval.lean  Notation.lean  PSLQ.lean  Positive.lean  PrimeFactors.lean  Rat.lean  Trig.lean  Types.lean
lean4/Test/: Main.lean
mercury/: .gitignore  alg_num.m  cyclotomic.m  demo_elliptic_integral.m  demo_euler_integral.m  demo_rational_smoke.m  demo_solvable_quintic.m  demo_trig_table.m  denest.m  denest_landau.m  denest_nthroot.m  denest_sqrt.m  dyn_tower.m  dyn_tower_display.m  elliptic_integrate.m  euler_integrate.m  eval_mp.m  extension.m  factoring.m  galois_identify.m  galois_solve.m  groebner.m  integer.m  interval.m  latex.m  mercury-stdlib-integer-bug-report.md  minimal_poly.m  minimal_poly_tower.m  multivariate.m  normal_form.m  permutation.m  poly.m  positive.m  pretty.m  prime_factors.m  pslq.m  rad_alg_convert.m  rad_dag.m  rad_equality.m  rad_eval.m  (+21 more)
ocaml/: dune-project
ocaml/_build/: .db  .digest-db  log
ocaml/lib/: cyclotomic.ml  denest.ml  dune  equality.ml  euler_integration.ml  field_sig.ml  galois_solve.ml  identify.ml  interval.ml  latex.ml  normalize.ml  order.ml  permutation.ml  poly.ml  rad_expr.ml  radical_tower.ml  resolvent.ml  resultant.ml  root_of_unity.ml  surd.ml  transitive_group.ml  trig_galois.ml
ocaml/test/: dune  (+1 more)
scala3/: .gitignore  build.sbt
(+423 files in other folders)
