cabal-version:   3.0
name:            surd
version:         0.1.0.0
synopsis:        Symbolic radical denesting, complex root simplification, and exact trigonometry
license:         BSD-3-Clause
build-type:      Simple

library
  hs-source-dirs:   src
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat -Wno-pattern-namespace-specifier
  exposed-modules:
    Surd.Types
    Surd.Polynomial.MinimalPoly
    Surd.Polynomial.MinimalPolyTower
    Surd.Field.Tower
    Surd.Field.DynTower
    Surd.Algebraic.RootIsolation
    Surd.Algebraic.Number
    Surd.Algebraic.Convert
    Surd.Radical.Expr
    Surd.Radical.DAG
    Surd.Radical.Eval
    Surd.Radical.EvalMP
    Surd.Radical.LaTeX
    Surd.Radical.Normalize
    Surd.Radical.NormalForm
    Surd.Radical.Groebner
    Surd.Radical.Pretty
    Surd.Radical.Denest
    Surd.Radical.Denest.Sqrt
    Surd.Radical.Denest.NthRoot
    Surd.Radical.Denest.Landau
    Surd.Radical.Equality
    Surd.Radical.Order
    Surd.Trig
    Surd.Trig.RootOfUnity
    Surd.Trig.Galois
    Surd.Trig.TowerDescent
  build-depends:
    base >= 4.18 && < 5,
    aern2-mp >= 0.2.15,
    algebraic-polynomials,
    containers >= 0.6,
    exact-real >= 0.12,
    integer-roots >= 1.0,
    mixed-types-num >= 0.6,
    collect-errors >= 0.1.5,
    vector >= 0.13

executable surd-trig-table
  hs-source-dirs:   demo
  main-is:          TrigTable.hs
  default-language: GHC2021
  ghc-options:      -Wall -Wno-pattern-namespace-specifier -O2
  build-depends:
    base >= 4.18 && < 5,
    surd

test-suite surd-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: GHC2021
  ghc-options:      -Wall -Wno-pattern-namespace-specifier
  other-modules:
    Test.Polynomial
    Test.Denest
    Test.NormalForm
    Test.Trig
    Test.Algebraic
    Test.Interval
    Test.Multivariate
    Test.TragerFactoring
    Test.Groebner
    Test.DynTower
  build-depends:
    base >= 4.18 && < 5,
    algebraic-polynomials,
    surd,
    tasty >= 1.4,
    tasty-hunit >= 0.10,
    tasty-quickcheck >= 0.10
