cabal-version:   3.0
name:            surd
version:         0.1.0.0
synopsis:        Symbolic radical denesting, complex root simplification, and exact trigonometry
description:
  Surd is a symbolic mathematics library for radical expressions over
  the rationals (Q). It provides exact, closed-form representations of
  algebraic numbers as nested radicals with rational coefficients.
  .
  Core capabilities include radical denesting (Borodin, Landau, and
  general nth-root algorithms), expression simplification, equality
  testing, and canonical ordering of radical expressions.
  .
  Exact trigonometric values at rational multiples of \(\pi\) are computed
  via Gauss period descent with Lagrange resolvents, supporting all
  denominators including primes, prime powers, and composites via CRT
  decomposition.
  .
  Galois group computation over Q identifies transitive subgroups of
  S_n via resolvent polynomials, enabling radical solving of
  polynomials with solvable Galois groups up to degree 5.
  .
  Expressions are canonicalized to a normal form based on radical
  monomials with automatic like-term collection and exponent reduction.
  A DAG-based intermediate representation eliminates exponential
  tree traversal, and arbitrary-precision ball arithmetic (via aern2-mp)
  provides rigorous numerical evaluation at any desired precision.
category:        Algebra, Math, Symbolic Computation
homepage:        https://github.com/NadiaYvette/surd
bug-reports:     https://github.com/NadiaYvette/surd/issues
license:         BSD-3-Clause
build-type:      Simple

library
  hs-source-dirs:   src
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat -Wno-pattern-namespace-specifier
  exposed-modules:
    Surd.Types
    Surd.Polynomial.MinimalPoly
    Surd.Polynomial.MinimalPolyTower
    Surd.Field.Tower
    Surd.Field.DynTower
    Surd.Field.DynTower.Display
    Surd.Algebraic.RootIsolation
    Surd.Algebraic.Number
    Surd.Algebraic.Convert
    Surd.Radical.Expr
    Surd.Radical.DAG
    Surd.Radical.Eval
    Surd.Radical.EvalMP
    Surd.Radical.LaTeX
    Surd.Radical.Normalize
    Surd.Radical.NormalForm
    Surd.Radical.Groebner
    Surd.Radical.Pretty
    Surd.Radical.Denest
    Surd.Radical.Denest.Sqrt
    Surd.Radical.Denest.NthRoot
    Surd.Radical.Denest.Landau
    Surd.Radical.Equality
    Surd.Radical.Order
    Surd.Trig
    Surd.Trig.RootOfUnity
    Surd.Trig.Galois
    Surd.Trig.TowerDescent
    Surd.Integration.Euler
    Surd.Integration.Elliptic
    Surd.Galois.Permutation
    Surd.Galois.TransitiveGroup
    Surd.Galois.Resolvent
    Surd.Galois.Identify
    Surd.Galois.RadicalTower
    Surd.Galois.Solve
  build-depends:
    base >= 4.18 && < 5,
    aern2-mp >= 0.2.15,
    algebraic-polynomials,
    containers >= 0.6,
    exact-real >= 0.12,
    integer-roots >= 1.0,
    mixed-types-num >= 0.6,
    collect-errors >= 0.1.5,
    vector >= 0.13

executable surd-euler-integral
  hs-source-dirs:   demo
  main-is:          EulerIntegral.hs
  default-language: GHC2021
  ghc-options:      -Wall -Wno-pattern-namespace-specifier -O2
  build-depends:
    base >= 4.18 && < 5,
    algebraic-polynomials,
    surd

executable surd-elliptic-integral
  hs-source-dirs:   demo
  main-is:          EllipticIntegral.hs
  default-language: GHC2021
  ghc-options:      -Wall -Wno-pattern-namespace-specifier -O2
  build-depends:
    base >= 4.18 && < 5,
    algebraic-polynomials,
    surd

executable surd-solvable-quintic
  hs-source-dirs:   demo
  main-is:          SolvableQuintic.hs
  default-language: GHC2021
  ghc-options:      -Wall -Wno-pattern-namespace-specifier -O2
  build-depends:
    base >= 4.18 && < 5,
    algebraic-polynomials,
    surd

executable surd-trig-table
  hs-source-dirs:   demo
  main-is:          TrigTable.hs
  default-language: GHC2021
  ghc-options:      -Wall -Wno-pattern-namespace-specifier -O2
  build-depends:
    base >= 4.18 && < 5,
    surd

test-suite surd-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: GHC2021
  ghc-options:      -Wall -Wno-pattern-namespace-specifier
  other-modules:
    Test.Polynomial
    Test.Denest
    Test.NormalForm
    Test.Trig
    Test.Algebraic
    Test.Interval
    Test.Multivariate
    Test.TragerFactoring
    Test.Groebner
    Test.DynTower
  build-depends:
    base >= 4.18 && < 5,
    algebraic-polynomials,
    surd,
    tasty >= 1.4,
    tasty-hunit >= 0.10,
    tasty-quickcheck >= 0.10
